// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots AppBar basic 1`] = `
<div>
  <header
    className="MuiPaper-root MuiPaper-elevation4 MuiAppBar-root MuiAppBar-positionStatic MuiAppBar-colorPrimary"
  >
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-wrap-xs-nowrap MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between"
      style={
        Object {
          "flexGrow": undefined,
          "height": undefined,
          "width": undefined,
        }
      }
    >
      <p
        className="MuiTypography-root MuiTypography-body1"
      >
        Admiral AppBar
      </p>
      <div
        className="MuiFormControl-root MuiTextField-root MuiFormControl-marginDense"
        onError={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        onReset={[Function]}
      >
        <div
          className="MuiInputBase-root MuiInput-root makeStyles-textClass-174 makeStyles-textClass-179 MuiInput-underline makeStyles-baseClass-170 makeStyles-baseClass-175 MuiInputBase-formControl MuiInput-formControl MuiInputBase-marginDense"
          onClick={[Function]}
        >
          <input
            aria-invalid={false}
            className="MuiInputBase-input MuiInput-input MuiInputBase-inputMarginDense MuiInput-inputMarginDense"
            disabled={false}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
          />
        </div>
      </div>
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root"
        focusable="false"
        onClick={[Function]}
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"
        />
      </svg>
    </div>
  </header>
</div>
`;

exports[`Storyshots Button IconButton 1`] = `
<div>
  <button
    className="MuiButtonBase-root MuiIconButton-root"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiIconButton-label"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Storyshots Button Standard 1`] = `
<div>
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
    disabled={false}
    onBlur={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    style={
      Object {
        "minWidth": 80,
        "textTransform": "none",
      }
    }
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      This says stuff!
    </span>
  </button>
</div>
`;

exports[`Storyshots Card ContentCard 1`] = `
<div>
  <div
    className="MuiPaper-root MuiPaper-elevation1 MuiCard-root MuiPaper-rounded"
    style={
      Object {
        "padding": 8,
        "width": "fit-content",
      }
    }
  >
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-wrap-xs-nowrap MuiGrid-align-items-xs-flex-start"
      style={
        Object {
          "flexGrow": undefined,
          "height": undefined,
          "width": undefined,
        }
      }
    >
      <div
        className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-wrap-xs-nowrap MuiGrid-align-items-xs-flex-start MuiGrid-justify-xs-center"
        style={
          Object {
            "flexGrow": undefined,
            "height": undefined,
            "width": undefined,
          }
        }
      >
        <p
          className="MuiTypography-root MuiTypography-body2"
        >
          key: value
        </p>
      </div>
      <div
        className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-wrap-xs-nowrap MuiGrid-align-items-xs-flex-start MuiGrid-justify-xs-center"
        style={
          Object {
            "flexGrow": undefined,
            "height": undefined,
            "width": undefined,
          }
        }
      >
        <p
          className="MuiTypography-root MuiTypography-body2"
        >
          anotherKey: anotherValue
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Card Standard 1`] = `
<div>
  <div
    className="MuiPaper-root MuiPaper-elevation1 MuiCard-root MuiPaper-rounded"
    style={
      Object {
        "padding": 8,
        "width": "fit-content",
      }
    }
  >
    I am a card!
  </div>
</div>
`;

exports[`Storyshots Form AutoForm 1`] = `
<div>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-wrap-xs-nowrap MuiGrid-align-items-xs-flex-start"
    style={
      Object {
        "flexGrow": undefined,
        "height": undefined,
        "width": undefined,
      }
    }
  >
    <div
      className="MuiFormControl-root MuiTextField-root MuiFormControl-marginDense"
      onError={[Function]}
      onKeyDown={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      onReset={[Function]}
    >
      <label
        className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-marginDense MuiInputLabel-outlined"
        data-shrink={false}
        style={
          Object {
            "color": "rgb(83, 147, 255)",
          }
        }
      >
        Sarthak
      </label>
      <div
        className="MuiInputBase-root MuiOutlinedInput-root makeStyles-textClass-786 makeStyles-textClass-791 MuiInputBase-formControl MuiInputBase-marginDense MuiOutlinedInput-marginDense"
        onClick={[Function]}
      >
        <fieldset
          aria-hidden={true}
          className="PrivateNotchedOutline-root-848 MuiOutlinedInput-notchedOutline makeStyles-baseClass-782 makeStyles-baseClass-787"
          style={
            Object {
              "paddingLeft": 8,
            }
          }
        >
          <legend
            className="PrivateNotchedOutline-legend-849"
            style={
              Object {
                "width": 0.01,
              }
            }
          >
            <span
              dangerouslySetInnerHTML={
                Object {
                  "__html": "&#8203;",
                }
              }
            />
          </legend>
        </fieldset>
        <input
          aria-invalid={false}
          className="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMarginDense MuiOutlinedInput-inputMarginDense"
          disabled={false}
          name="first"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          required={false}
          type="text"
        />
      </div>
    </div>
    <div
      className="MuiFormControl-root MuiTextField-root MuiFormControl-marginDense"
      onError={[Function]}
      onKeyDown={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      onReset={[Function]}
    >
      <label
        className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-marginDense MuiInputLabel-outlined"
        data-shrink={false}
        style={
          Object {
            "color": "rgb(83, 147, 255)",
          }
        }
      >
        Agrawal
      </label>
      <div
        className="MuiInputBase-root MuiOutlinedInput-root makeStyles-textClass-786 makeStyles-textClass-854 MuiInputBase-formControl MuiInputBase-marginDense MuiOutlinedInput-marginDense"
        onClick={[Function]}
      >
        <fieldset
          aria-hidden={true}
          className="PrivateNotchedOutline-root-848 MuiOutlinedInput-notchedOutline makeStyles-baseClass-782 makeStyles-baseClass-850"
          style={
            Object {
              "paddingLeft": 8,
            }
          }
        >
          <legend
            className="PrivateNotchedOutline-legend-849"
            style={
              Object {
                "width": 0.01,
              }
            }
          >
            <span
              dangerouslySetInnerHTML={
                Object {
                  "__html": "&#8203;",
                }
              }
            />
          </legend>
        </fieldset>
        <input
          aria-invalid={false}
          className="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMarginDense MuiOutlinedInput-inputMarginDense"
          disabled={false}
          name="last"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          required={false}
          type="text"
        />
      </div>
    </div>
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "minWidth": 80,
          "textTransform": "none",
        }
      }
      tabIndex={0}
      type="submit"
    >
      <span
        className="MuiButton-label"
      >
        Save changes
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Form Text only 1`] = `
<div>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-wrap-xs-nowrap MuiGrid-align-items-xs-flex-start"
    style={
      Object {
        "flexGrow": undefined,
        "height": undefined,
        "width": 200,
      }
    }
  >
    <div
      className="MuiFormControl-root MuiTextField-root MuiFormControl-marginDense"
      onError={[Function]}
      onKeyDown={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      onReset={[Function]}
    >
      <label
        className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-marginDense MuiInputLabel-outlined"
        data-shrink={false}
        style={
          Object {
            "color": "rgb(83, 147, 255)",
          }
        }
      >
        first
      </label>
      <div
        className="MuiInputBase-root MuiOutlinedInput-root makeStyles-textClass-580 makeStyles-textClass-585 MuiInputBase-formControl MuiInputBase-marginDense MuiOutlinedInput-marginDense"
        onClick={[Function]}
      >
        <fieldset
          aria-hidden={true}
          className="PrivateNotchedOutline-root-642 MuiOutlinedInput-notchedOutline makeStyles-baseClass-576 makeStyles-baseClass-581"
          style={
            Object {
              "paddingLeft": 8,
            }
          }
        >
          <legend
            className="PrivateNotchedOutline-legend-643"
            style={
              Object {
                "width": 0.01,
              }
            }
          >
            <span
              dangerouslySetInnerHTML={
                Object {
                  "__html": "&#8203;",
                }
              }
            />
          </legend>
        </fieldset>
        <input
          aria-invalid={false}
          className="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMarginDense MuiOutlinedInput-inputMarginDense"
          disabled={false}
          name="first"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          required={false}
          type="text"
        />
      </div>
    </div>
    <div
      className="MuiFormControl-root MuiTextField-root MuiFormControl-marginDense"
      onError={[Function]}
      onKeyDown={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      onReset={[Function]}
    >
      <label
        className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-marginDense MuiInputLabel-outlined"
        data-shrink={false}
        style={
          Object {
            "color": "rgb(83, 147, 255)",
          }
        }
      >
        last
      </label>
      <div
        className="MuiInputBase-root MuiOutlinedInput-root makeStyles-textClass-580 makeStyles-textClass-648 MuiInputBase-formControl MuiInputBase-marginDense MuiOutlinedInput-marginDense"
        onClick={[Function]}
      >
        <fieldset
          aria-hidden={true}
          className="PrivateNotchedOutline-root-642 MuiOutlinedInput-notchedOutline makeStyles-baseClass-576 makeStyles-baseClass-644"
          style={
            Object {
              "paddingLeft": 8,
            }
          }
        >
          <legend
            className="PrivateNotchedOutline-legend-643"
            style={
              Object {
                "width": 0.01,
              }
            }
          >
            <span
              dangerouslySetInnerHTML={
                Object {
                  "__html": "&#8203;",
                }
              }
            />
          </legend>
        </fieldset>
        <input
          aria-invalid={false}
          className="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMarginDense MuiOutlinedInput-inputMarginDense"
          disabled={false}
          name="last"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          required={false}
          type="text"
        />
      </div>
    </div>
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "minWidth": 80,
          "textTransform": "none",
        }
      }
      tabIndex={0}
      type="submit"
    >
      <span
        className="MuiButton-label"
      >
        Submit
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Input Text 1`] = `
<div>
  <div
    className="MuiFormControl-root MuiTextField-root MuiFormControl-marginDense"
    onError={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    onReset={[Function]}
  >
    <div
      className="MuiInputBase-root MuiOutlinedInput-root makeStyles-textClass-889 makeStyles-textClass-894 MuiInputBase-formControl MuiInputBase-marginDense MuiOutlinedInput-marginDense"
      onClick={[Function]}
    >
      <fieldset
        aria-hidden={true}
        className="PrivateNotchedOutline-root-932 MuiOutlinedInput-notchedOutline makeStyles-baseClass-885 makeStyles-baseClass-890"
        style={
          Object {
            "paddingLeft": 8,
          }
        }
      >
        <legend
          className="PrivateNotchedOutline-legend-933"
          style={
            Object {
              "width": 0.01,
            }
          }
        >
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": "&#8203;",
              }
            }
          />
        </legend>
      </fieldset>
      <input
        aria-invalid={false}
        className="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMarginDense MuiOutlinedInput-inputMarginDense"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        required={false}
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Layout Column 1`] = `
<div>
  <div
    style={
      Object {
        "height": "95vh",
        "width": "95vw",
      }
    }
  >
    <div
      className="MuiGrid-root-1065 MuiGrid-container-1066 MuiGrid-item-1067 MuiGrid-direction-xs-column-1069 MuiGrid-wrap-xs-nowrap-1072 MuiGrid-align-items-xs-flex-start-1075"
      style={
        Object {
          "flexGrow": undefined,
          "height": undefined,
          "width": undefined,
        }
      }
    >
      <div
        className="MuiPaper-root-1169 MuiPaper-elevation1-1172 MuiCard-root-1168 MuiPaper-rounded-1170"
        style={
          Object {
            "padding": 8,
            "width": "fit-content",
          }
        }
      >
        One
      </div>
      <div
        className="MuiPaper-root-1169 MuiPaper-elevation1-1172 MuiCard-root-1168 MuiPaper-rounded-1170"
        style={
          Object {
            "padding": 8,
            "width": "fit-content",
          }
        }
      >
        Two
      </div>
      <div
        className="MuiPaper-root-1169 MuiPaper-elevation1-1172 MuiCard-root-1168 MuiPaper-rounded-1170"
        style={
          Object {
            "padding": 8,
            "width": "fit-content",
          }
        }
      >
        Three
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Layout Column of columns 1`] = `
<div>
  <div
    style={
      Object {
        "height": "95vh",
        "width": "95vw",
      }
    }
  >
    <div
      className="MuiGrid-root-1589 MuiGrid-container-1590 MuiGrid-item-1591 MuiGrid-direction-xs-column-1593 MuiGrid-wrap-xs-nowrap-1596 MuiGrid-align-items-xs-flex-start-1599"
      style={
        Object {
          "flexGrow": undefined,
          "height": undefined,
          "width": undefined,
        }
      }
    >
      <div
        className="MuiGrid-root-1589 MuiGrid-container-1590 MuiGrid-item-1591 MuiGrid-direction-xs-column-1593 MuiGrid-wrap-xs-nowrap-1596 MuiGrid-align-items-xs-flex-start-1599"
        style={
          Object {
            "flexGrow": undefined,
            "height": undefined,
            "width": undefined,
          }
        }
      >
        <div
          className="MuiPaper-root-1693 MuiPaper-elevation1-1696 MuiCard-root-1692 MuiPaper-rounded-1694"
          style={
            Object {
              "padding": 8,
              "width": "fit-content",
            }
          }
        >
          One
        </div>
        <div
          className="MuiPaper-root-1693 MuiPaper-elevation1-1696 MuiCard-root-1692 MuiPaper-rounded-1694"
          style={
            Object {
              "padding": 8,
              "width": "fit-content",
            }
          }
        >
          Two
        </div>
        <div
          className="MuiPaper-root-1693 MuiPaper-elevation1-1696 MuiCard-root-1692 MuiPaper-rounded-1694"
          style={
            Object {
              "padding": 8,
              "width": "fit-content",
            }
          }
        >
          Three
        </div>
      </div>
      <div
        className="MuiGrid-root-1589 MuiGrid-container-1590 MuiGrid-item-1591 MuiGrid-direction-xs-column-1593 MuiGrid-wrap-xs-nowrap-1596 MuiGrid-align-items-xs-flex-start-1599"
        style={
          Object {
            "flexGrow": undefined,
            "height": undefined,
            "width": undefined,
          }
        }
      >
        <div
          className="MuiPaper-root-1693 MuiPaper-elevation1-1696 MuiCard-root-1692 MuiPaper-rounded-1694"
          style={
            Object {
              "padding": 8,
              "width": "fit-content",
            }
          }
        >
          One
        </div>
        <div
          className="MuiPaper-root-1693 MuiPaper-elevation1-1696 MuiCard-root-1692 MuiPaper-rounded-1694"
          style={
            Object {
              "padding": 8,
              "width": "fit-content",
            }
          }
        >
          Two
        </div>
        <div
          className="MuiPaper-root-1693 MuiPaper-elevation1-1696 MuiCard-root-1692 MuiPaper-rounded-1694"
          style={
            Object {
              "padding": 8,
              "width": "fit-content",
            }
          }
        >
          Three
        </div>
      </div>
      <div
        className="MuiGrid-root-1589 MuiGrid-container-1590 MuiGrid-item-1591 MuiGrid-direction-xs-column-1593 MuiGrid-wrap-xs-nowrap-1596 MuiGrid-align-items-xs-flex-start-1599"
        style={
          Object {
            "flexGrow": undefined,
            "height": undefined,
            "width": undefined,
          }
        }
      >
        <div
          className="MuiPaper-root-1693 MuiPaper-elevation1-1696 MuiCard-root-1692 MuiPaper-rounded-1694"
          style={
            Object {
              "padding": 8,
              "width": "fit-content",
            }
          }
        >
          One
        </div>
        <div
          className="MuiPaper-root-1693 MuiPaper-elevation1-1696 MuiCard-root-1692 MuiPaper-rounded-1694"
          style={
            Object {
              "padding": 8,
              "width": "fit-content",
            }
          }
        >
          Two
        </div>
        <div
          className="MuiPaper-root-1693 MuiPaper-elevation1-1696 MuiCard-root-1692 MuiPaper-rounded-1694"
          style={
            Object {
              "padding": 8,
              "width": "fit-content",
            }
          }
        >
          Three
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Layout Column of rows 1`] = `
<div>
  <div
    style={
      Object {
        "height": "95vh",
        "width": "95vw",
      }
    }
  >
    <div
      className="MuiGrid-root-1458 MuiGrid-container-1459 MuiGrid-item-1460 MuiGrid-direction-xs-column-1462 MuiGrid-wrap-xs-nowrap-1465 MuiGrid-align-items-xs-flex-start-1468"
      style={
        Object {
          "flexGrow": undefined,
          "height": undefined,
          "width": undefined,
        }
      }
    >
      <div
        className="MuiGrid-root-1458 MuiGrid-container-1459 MuiGrid-item-1460 MuiGrid-wrap-xs-nowrap-1465 MuiGrid-align-items-xs-flex-start-1468"
        style={
          Object {
            "flexGrow": undefined,
            "height": undefined,
            "width": undefined,
          }
        }
      >
        <div
          className="MuiPaper-root-1562 MuiPaper-elevation1-1565 MuiCard-root-1561 MuiPaper-rounded-1563"
          style={
            Object {
              "padding": 8,
              "width": "fit-content",
            }
          }
        >
          One
        </div>
        <div
          className="MuiPaper-root-1562 MuiPaper-elevation1-1565 MuiCard-root-1561 MuiPaper-rounded-1563"
          style={
            Object {
              "padding": 8,
              "width": "fit-content",
            }
          }
        >
          Two
        </div>
        <div
          className="MuiPaper-root-1562 MuiPaper-elevation1-1565 MuiCard-root-1561 MuiPaper-rounded-1563"
          style={
            Object {
              "padding": 8,
              "width": "fit-content",
            }
          }
        >
          Three
        </div>
      </div>
      <div
        className="MuiGrid-root-1458 MuiGrid-container-1459 MuiGrid-item-1460 MuiGrid-wrap-xs-nowrap-1465 MuiGrid-align-items-xs-flex-start-1468"
        style={
          Object {
            "flexGrow": undefined,
            "height": undefined,
            "width": undefined,
          }
        }
      >
        <div
          className="MuiPaper-root-1562 MuiPaper-elevation1-1565 MuiCard-root-1561 MuiPaper-rounded-1563"
          style={
            Object {
              "padding": 8,
              "width": "fit-content",
            }
          }
        >
          One
        </div>
        <div
          className="MuiPaper-root-1562 MuiPaper-elevation1-1565 MuiCard-root-1561 MuiPaper-rounded-1563"
          style={
            Object {
              "padding": 8,
              "width": "fit-content",
            }
          }
        >
          Two
        </div>
        <div
          className="MuiPaper-root-1562 MuiPaper-elevation1-1565 MuiCard-root-1561 MuiPaper-rounded-1563"
          style={
            Object {
              "padding": 8,
              "width": "fit-content",
            }
          }
        >
          Three
        </div>
      </div>
      <div
        className="MuiGrid-root-1458 MuiGrid-container-1459 MuiGrid-item-1460 MuiGrid-wrap-xs-nowrap-1465 MuiGrid-align-items-xs-flex-start-1468"
        style={
          Object {
            "flexGrow": undefined,
            "height": undefined,
            "width": undefined,
          }
        }
      >
        <div
          className="MuiPaper-root-1562 MuiPaper-elevation1-1565 MuiCard-root-1561 MuiPaper-rounded-1563"
          style={
            Object {
              "padding": 8,
              "width": "fit-content",
            }
          }
        >
          One
        </div>
        <div
          className="MuiPaper-root-1562 MuiPaper-elevation1-1565 MuiCard-root-1561 MuiPaper-rounded-1563"
          style={
            Object {
              "padding": 8,
              "width": "fit-content",
            }
          }
        >
          Two
        </div>
        <div
          className="MuiPaper-root-1562 MuiPaper-elevation1-1565 MuiCard-root-1561 MuiPaper-rounded-1563"
          style={
            Object {
              "padding": 8,
              "width": "fit-content",
            }
          }
        >
          Three
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Layout Page 1`] = `
<div>
  <div
    style={
      Object {
        "height": "95vh",
        "width": "95vw",
      }
    }
  >
    <div
      className="MuiGrid-root-1720 MuiGrid-container-1721 MuiGrid-item-1722 MuiGrid-wrap-xs-nowrap-1727 MuiGrid-align-items-xs-flex-start-1730"
      style={
        Object {
          "flexGrow": undefined,
          "height": "100%",
          "width": undefined,
        }
      }
    >
      <div
        className="MuiGrid-root-1720 MuiGrid-container-1721 MuiGrid-item-1722 MuiGrid-direction-xs-column-1724 MuiGrid-wrap-xs-nowrap-1727 MuiGrid-align-items-xs-flex-start-1730"
        style={
          Object {
            "flexGrow": undefined,
            "height": "100%",
            "width": 100,
          }
        }
      >
        Sidebar
      </div>
      <div
        className="MuiGrid-root-1720 MuiGrid-container-1721 MuiGrid-item-1722 MuiGrid-direction-xs-column-1724 MuiGrid-wrap-xs-nowrap-1727 MuiGrid-align-items-xs-flex-start-1730"
        style={
          Object {
            "flexGrow": 1,
            "height": "100%",
            "width": undefined,
          }
        }
      >
        <div
          className="MuiGrid-root-1720 MuiGrid-container-1721 MuiGrid-item-1722 MuiGrid-wrap-xs-nowrap-1727 MuiGrid-align-items-xs-flex-start-1730"
          style={
            Object {
              "flexGrow": undefined,
              "height": 100,
              "width": undefined,
            }
          }
        >
          Header
        </div>
        <div
          className="MuiGrid-root-1720 MuiGrid-container-1721 MuiGrid-item-1722 MuiGrid-wrap-xs-nowrap-1727 MuiGrid-align-items-xs-flex-start-1730"
          style={
            Object {
              "flexGrow": 1,
              "height": undefined,
              "width": undefined,
            }
          }
        >
          <div
            className="MuiGrid-root-1720 MuiGrid-container-1721 MuiGrid-item-1722 MuiGrid-direction-xs-column-1724 MuiGrid-wrap-xs-nowrap-1727 MuiGrid-align-items-xs-center-1729 MuiGrid-justify-xs-space-between-1740"
            style={
              Object {
                "flexGrow": undefined,
                "height": "100%",
                "width": undefined,
              }
            }
          >
            <p>
              Left content
            </p>
            <div
              className="MuiPaper-root-1824 MuiPaper-elevation1-1827 MuiCard-root-1823 MuiPaper-rounded-1825"
              style={
                Object {
                  "padding": 8,
                  "width": "fit-content",
                }
              }
            >
              One
            </div>
            <div
              className="MuiPaper-root-1824 MuiPaper-elevation1-1827 MuiCard-root-1823 MuiPaper-rounded-1825"
              style={
                Object {
                  "padding": 8,
                  "width": "fit-content",
                }
              }
            >
              Two
            </div>
            <div
              className="MuiPaper-root-1824 MuiPaper-elevation1-1827 MuiCard-root-1823 MuiPaper-rounded-1825"
              style={
                Object {
                  "padding": 8,
                  "width": "fit-content",
                }
              }
            >
              Three
            </div>
          </div>
          <div
            className="MuiGrid-root-1720 MuiGrid-container-1721 MuiGrid-item-1722 MuiGrid-direction-xs-column-1724 MuiGrid-wrap-xs-nowrap-1727 MuiGrid-align-items-xs-center-1729"
            style={
              Object {
                "flexGrow": undefined,
                "height": "100%",
                "width": undefined,
              }
            }
          >
            <p>
              Right content
            </p>
            <div
              className="MuiGrid-root-1720 MuiGrid-container-1721 MuiGrid-item-1722 MuiGrid-wrap-xs-nowrap-1727 MuiGrid-align-items-xs-center-1729 MuiGrid-justify-xs-center-1738"
              style={
                Object {
                  "flexGrow": 1,
                  "height": undefined,
                  "width": undefined,
                }
              }
            >
              <div
                className="MuiPaper-root-1824 MuiPaper-elevation1-1827 MuiCard-root-1823 MuiPaper-rounded-1825"
                style={
                  Object {
                    "padding": 8,
                    "width": "fit-content",
                  }
                }
              >
                More content
              </div>
            </div>
          </div>
        </div>
        <div
          className="MuiGrid-root-1720 MuiGrid-container-1721 MuiGrid-item-1722 MuiGrid-wrap-xs-nowrap-1727 MuiGrid-align-items-xs-flex-start-1730"
          style={
            Object {
              "flexGrow": undefined,
              "height": 50,
              "width": undefined,
            }
          }
        >
          Footer
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Layout Responsive 1`] = `
<div>
  <div
    style={
      Object {
        "height": "95vh",
        "width": "95vw",
      }
    }
  >
    <div
      className="MuiGrid-root-1851 MuiGrid-container-1852 MuiGrid-item-1853 MuiGrid-align-items-xs-flex-start-1861"
      style={
        Object {
          "flexGrow": undefined,
          "height": undefined,
          "width": undefined,
        }
      }
    >
      <div
        className="MuiGrid-root-1851 MuiGrid-container-1852 MuiGrid-item-1853 MuiGrid-wrap-xs-nowrap-1858 MuiGrid-align-items-xs-flex-start-1861 MuiGrid-justify-xs-space-around-1872 MuiGrid-grid-md-4-1917"
        style={
          Object {
            "flexGrow": undefined,
            "height": undefined,
            "width": undefined,
          }
        }
      >
        <div
          className="MuiPaper-root-1955 MuiPaper-elevation1-1958 MuiCard-root-1954 MuiPaper-rounded-1956"
          style={
            Object {
              "padding": 8,
              "width": "fit-content",
            }
          }
        >
          Try
        </div>
      </div>
      <div
        className="MuiGrid-root-1851 MuiGrid-container-1852 MuiGrid-item-1853 MuiGrid-wrap-xs-nowrap-1858 MuiGrid-align-items-xs-flex-start-1861 MuiGrid-justify-xs-space-around-1872 MuiGrid-grid-md-4-1917"
        style={
          Object {
            "flexGrow": undefined,
            "height": undefined,
            "width": undefined,
          }
        }
      >
        <div
          className="MuiPaper-root-1955 MuiPaper-elevation1-1958 MuiCard-root-1954 MuiPaper-rounded-1956"
          style={
            Object {
              "padding": 8,
              "width": "fit-content",
            }
          }
        >
          Resizing
        </div>
      </div>
      <div
        className="MuiGrid-root-1851 MuiGrid-container-1852 MuiGrid-item-1853 MuiGrid-wrap-xs-nowrap-1858 MuiGrid-align-items-xs-flex-start-1861 MuiGrid-justify-xs-space-around-1872 MuiGrid-grid-md-4-1917"
        style={
          Object {
            "flexGrow": undefined,
            "height": undefined,
            "width": undefined,
          }
        }
      >
        <div
          className="MuiPaper-root-1955 MuiPaper-elevation1-1958 MuiCard-root-1954 MuiPaper-rounded-1956"
          style={
            Object {
              "padding": 8,
              "width": "fit-content",
            }
          }
        >
          Your window
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Layout Row 1`] = `
<div>
  <div
    style={
      Object {
        "height": "95vh",
        "width": "95vw",
      }
    }
  >
    <div
      className="MuiGrid-root-934 MuiGrid-container-935 MuiGrid-item-936 MuiGrid-wrap-xs-nowrap-941 MuiGrid-align-items-xs-flex-start-944"
      style={
        Object {
          "flexGrow": undefined,
          "height": undefined,
          "width": undefined,
        }
      }
    >
      <div
        className="MuiPaper-root-1038 MuiPaper-elevation1-1041 MuiCard-root-1037 MuiPaper-rounded-1039"
        style={
          Object {
            "padding": 8,
            "width": "fit-content",
          }
        }
      >
        One
      </div>
      <div
        className="MuiPaper-root-1038 MuiPaper-elevation1-1041 MuiCard-root-1037 MuiPaper-rounded-1039"
        style={
          Object {
            "padding": 8,
            "width": "fit-content",
          }
        }
      >
        Two
      </div>
      <div
        className="MuiPaper-root-1038 MuiPaper-elevation1-1041 MuiCard-root-1037 MuiPaper-rounded-1039"
        style={
          Object {
            "padding": 8,
            "width": "fit-content",
          }
        }
      >
        Three
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Layout Row of columns 1`] = `
<div>
  <div
    style={
      Object {
        "height": "95vh",
        "width": "95vw",
      }
    }
  >
    <div
      className="MuiGrid-root-1196 MuiGrid-container-1197 MuiGrid-item-1198 MuiGrid-wrap-xs-nowrap-1203 MuiGrid-align-items-xs-flex-start-1206"
      style={
        Object {
          "flexGrow": undefined,
          "height": undefined,
          "width": undefined,
        }
      }
    >
      <div
        className="MuiGrid-root-1196 MuiGrid-container-1197 MuiGrid-item-1198 MuiGrid-direction-xs-column-1200 MuiGrid-wrap-xs-nowrap-1203 MuiGrid-align-items-xs-flex-start-1206"
        style={
          Object {
            "flexGrow": undefined,
            "height": undefined,
            "width": undefined,
          }
        }
      >
        <div
          className="MuiPaper-root-1300 MuiPaper-elevation1-1303 MuiCard-root-1299 MuiPaper-rounded-1301"
          style={
            Object {
              "padding": 8,
              "width": "fit-content",
            }
          }
        >
          One
        </div>
        <div
          className="MuiPaper-root-1300 MuiPaper-elevation1-1303 MuiCard-root-1299 MuiPaper-rounded-1301"
          style={
            Object {
              "padding": 8,
              "width": "fit-content",
            }
          }
        >
          Two
        </div>
        <div
          className="MuiPaper-root-1300 MuiPaper-elevation1-1303 MuiCard-root-1299 MuiPaper-rounded-1301"
          style={
            Object {
              "padding": 8,
              "width": "fit-content",
            }
          }
        >
          Three
        </div>
      </div>
      <div
        className="MuiGrid-root-1196 MuiGrid-container-1197 MuiGrid-item-1198 MuiGrid-direction-xs-column-1200 MuiGrid-wrap-xs-nowrap-1203 MuiGrid-align-items-xs-flex-start-1206"
        style={
          Object {
            "flexGrow": undefined,
            "height": undefined,
            "width": undefined,
          }
        }
      >
        <div
          className="MuiPaper-root-1300 MuiPaper-elevation1-1303 MuiCard-root-1299 MuiPaper-rounded-1301"
          style={
            Object {
              "padding": 8,
              "width": "fit-content",
            }
          }
        >
          One
        </div>
        <div
          className="MuiPaper-root-1300 MuiPaper-elevation1-1303 MuiCard-root-1299 MuiPaper-rounded-1301"
          style={
            Object {
              "padding": 8,
              "width": "fit-content",
            }
          }
        >
          Two
        </div>
        <div
          className="MuiPaper-root-1300 MuiPaper-elevation1-1303 MuiCard-root-1299 MuiPaper-rounded-1301"
          style={
            Object {
              "padding": 8,
              "width": "fit-content",
            }
          }
        >
          Three
        </div>
      </div>
      <div
        className="MuiGrid-root-1196 MuiGrid-container-1197 MuiGrid-item-1198 MuiGrid-direction-xs-column-1200 MuiGrid-wrap-xs-nowrap-1203 MuiGrid-align-items-xs-flex-start-1206"
        style={
          Object {
            "flexGrow": undefined,
            "height": undefined,
            "width": undefined,
          }
        }
      >
        <div
          className="MuiPaper-root-1300 MuiPaper-elevation1-1303 MuiCard-root-1299 MuiPaper-rounded-1301"
          style={
            Object {
              "padding": 8,
              "width": "fit-content",
            }
          }
        >
          One
        </div>
        <div
          className="MuiPaper-root-1300 MuiPaper-elevation1-1303 MuiCard-root-1299 MuiPaper-rounded-1301"
          style={
            Object {
              "padding": 8,
              "width": "fit-content",
            }
          }
        >
          Two
        </div>
        <div
          className="MuiPaper-root-1300 MuiPaper-elevation1-1303 MuiCard-root-1299 MuiPaper-rounded-1301"
          style={
            Object {
              "padding": 8,
              "width": "fit-content",
            }
          }
        >
          Three
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Layout Row of rows 1`] = `
<div>
  <div
    style={
      Object {
        "height": "95vh",
        "width": "95vw",
      }
    }
  >
    <div
      className="MuiGrid-root-1327 MuiGrid-container-1328 MuiGrid-item-1329 MuiGrid-wrap-xs-nowrap-1334 MuiGrid-align-items-xs-flex-start-1337"
      style={
        Object {
          "flexGrow": undefined,
          "height": undefined,
          "width": undefined,
        }
      }
    >
      <div
        className="MuiGrid-root-1327 MuiGrid-container-1328 MuiGrid-item-1329 MuiGrid-wrap-xs-nowrap-1334 MuiGrid-align-items-xs-flex-start-1337"
        style={
          Object {
            "flexGrow": undefined,
            "height": undefined,
            "width": undefined,
          }
        }
      >
        <div
          className="MuiPaper-root-1431 MuiPaper-elevation1-1434 MuiCard-root-1430 MuiPaper-rounded-1432"
          style={
            Object {
              "padding": 8,
              "width": "fit-content",
            }
          }
        >
          One
        </div>
        <div
          className="MuiPaper-root-1431 MuiPaper-elevation1-1434 MuiCard-root-1430 MuiPaper-rounded-1432"
          style={
            Object {
              "padding": 8,
              "width": "fit-content",
            }
          }
        >
          Two
        </div>
        <div
          className="MuiPaper-root-1431 MuiPaper-elevation1-1434 MuiCard-root-1430 MuiPaper-rounded-1432"
          style={
            Object {
              "padding": 8,
              "width": "fit-content",
            }
          }
        >
          Three
        </div>
      </div>
      <div
        className="MuiGrid-root-1327 MuiGrid-container-1328 MuiGrid-item-1329 MuiGrid-wrap-xs-nowrap-1334 MuiGrid-align-items-xs-flex-start-1337"
        style={
          Object {
            "flexGrow": undefined,
            "height": undefined,
            "width": undefined,
          }
        }
      >
        <div
          className="MuiPaper-root-1431 MuiPaper-elevation1-1434 MuiCard-root-1430 MuiPaper-rounded-1432"
          style={
            Object {
              "padding": 8,
              "width": "fit-content",
            }
          }
        >
          One
        </div>
        <div
          className="MuiPaper-root-1431 MuiPaper-elevation1-1434 MuiCard-root-1430 MuiPaper-rounded-1432"
          style={
            Object {
              "padding": 8,
              "width": "fit-content",
            }
          }
        >
          Two
        </div>
        <div
          className="MuiPaper-root-1431 MuiPaper-elevation1-1434 MuiCard-root-1430 MuiPaper-rounded-1432"
          style={
            Object {
              "padding": 8,
              "width": "fit-content",
            }
          }
        >
          Three
        </div>
      </div>
      <div
        className="MuiGrid-root-1327 MuiGrid-container-1328 MuiGrid-item-1329 MuiGrid-wrap-xs-nowrap-1334 MuiGrid-align-items-xs-flex-start-1337"
        style={
          Object {
            "flexGrow": undefined,
            "height": undefined,
            "width": undefined,
          }
        }
      >
        <div
          className="MuiPaper-root-1431 MuiPaper-elevation1-1434 MuiCard-root-1430 MuiPaper-rounded-1432"
          style={
            Object {
              "padding": 8,
              "width": "fit-content",
            }
          }
        >
          One
        </div>
        <div
          className="MuiPaper-root-1431 MuiPaper-elevation1-1434 MuiCard-root-1430 MuiPaper-rounded-1432"
          style={
            Object {
              "padding": 8,
              "width": "fit-content",
            }
          }
        >
          Two
        </div>
        <div
          className="MuiPaper-root-1431 MuiPaper-elevation1-1434 MuiCard-root-1430 MuiPaper-rounded-1432"
          style={
            Object {
              "padding": 8,
              "width": "fit-content",
            }
          }
        >
          Three
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Menu Basic 1`] = `
<div>
  <div>
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "minWidth": 80,
          "textTransform": "none",
        }
      }
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        Open
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Modals ModalView 1`] = `
<div>
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    style={
      Object {
        "minWidth": 80,
        "textTransform": "none",
      }
    }
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      Open modal!
    </span>
  </button>
</div>
`;

exports[`Storyshots Response Data updates 1`] = `
<div>
  <p
    className="MuiTypography-root MuiTypography-body1"
  >
    
  </p>
  <div
    className="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
    role="progressbar"
    style={
      Object {
        "height": 40,
        "width": 40,
      }
    }
  >
    <svg
      className="MuiCircularProgress-svg"
      viewBox="22 22 44 44"
    >
      <circle
        className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
        cx={44}
        cy={44}
        fill="none"
        r={20.2}
        strokeWidth={3.6}
        style={Object {}}
      />
    </svg>
  </div>
  <span
    aria-describedby={null}
    className="MuiTypography-root MuiTypography-caption MuiTypography-noWrap"
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
    style={
      Object {
        "color": "#f44336",
        "whiteSpace": "pre-line",
      }
    }
    title={null}
  >
    🤔error 1
  </span>
  <span
    aria-describedby={null}
    className="MuiTypography-root MuiTypography-caption MuiTypography-noWrap"
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
    style={
      Object {
        "color": "#f44336",
        "whiteSpace": "pre-line",
      }
    }
    title={null}
  >
    🤔error 2
  </span>
  <div
    className="MuiFormControl-root MuiTextField-root MuiFormControl-marginDense"
    onError={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    onReset={[Function]}
  >
    <div
      className="MuiInputBase-root MuiOutlinedInput-root makeStyles-textClass-2115 makeStyles-textClass-2120 MuiInputBase-formControl MuiInputBase-marginDense MuiOutlinedInput-marginDense"
      onClick={[Function]}
    >
      <fieldset
        aria-hidden={true}
        className="PrivateNotchedOutline-root-2158 MuiOutlinedInput-notchedOutline makeStyles-baseClass-2111 makeStyles-baseClass-2116"
        style={
          Object {
            "paddingLeft": 8,
          }
        }
      >
        <legend
          className="PrivateNotchedOutline-legend-2159"
          style={
            Object {
              "width": 0.01,
            }
          }
        >
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": "&#8203;",
              }
            }
          />
        </legend>
      </fieldset>
      <input
        aria-invalid={false}
        className="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMarginDense MuiOutlinedInput-inputMarginDense"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        required={false}
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Text ErrorText 1`] = `
<div>
  <span
    aria-describedby={null}
    className="MuiTypography-root MuiTypography-caption MuiTypography-noWrap"
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
    style={
      Object {
        "color": "#f44336",
        "whiteSpace": "pre-line",
      }
    }
    title={null}
    toolTipPlacement="bottom"
  >
    🤔this says stuff
  </span>
</div>
`;

exports[`Storyshots TreeView Input as array of test data 1`] = `
<div>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-wrap-xs-nowrap MuiGrid-align-items-xs-flex-start"
    style={
      Object {
        "flexGrow": undefined,
        "height": undefined,
        "marginLeft": 0,
        "width": undefined,
      }
    }
  >
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-wrap-xs-nowrap MuiGrid-align-items-xs-flex-start"
      style={
        Object {
          "flexGrow": undefined,
          "height": undefined,
          "width": undefined,
        }
      }
    >
      <p
        className="MuiTypography-root MuiTypography-body1"
        onClick={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        style={
          Object {
            "backgroundColor": "white",
            "paddingLeft": 10,
            "paddingRight": 10,
          }
        }
      >
        stuff
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots TreeView Input as single object of test data 1`] = `
<div>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-wrap-xs-nowrap MuiGrid-align-items-xs-flex-start"
    style={
      Object {
        "flexGrow": undefined,
        "height": undefined,
        "marginLeft": 0,
        "width": undefined,
      }
    }
  >
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-wrap-xs-nowrap MuiGrid-align-items-xs-flex-start"
      style={
        Object {
          "flexGrow": undefined,
          "height": undefined,
          "width": undefined,
        }
      }
    >
      <p
        className="MuiTypography-root MuiTypography-body1"
        onClick={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        style={
          Object {
            "backgroundColor": "white",
            "paddingLeft": 10,
            "paddingRight": 10,
          }
        }
      >
        browserEvent: stuff
      </p>
    </div>
  </div>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-wrap-xs-nowrap MuiGrid-align-items-xs-flex-start"
    style={
      Object {
        "flexGrow": undefined,
        "height": undefined,
        "marginLeft": 0,
        "width": undefined,
      }
    }
  >
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-wrap-xs-nowrap MuiGrid-align-items-xs-flex-start"
      style={
        Object {
          "flexGrow": undefined,
          "height": undefined,
          "width": undefined,
        }
      }
    >
      <p
        className="MuiTypography-root MuiTypography-body1"
        onClick={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        style={
          Object {
            "backgroundColor": "white",
            "paddingLeft": 10,
            "paddingRight": 10,
          }
        }
      >
        tag: 33
      </p>
    </div>
  </div>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-wrap-xs-nowrap MuiGrid-align-items-xs-flex-start"
    style={
      Object {
        "flexGrow": undefined,
        "height": undefined,
        "marginLeft": 0,
        "width": undefined,
      }
    }
  >
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-wrap-xs-nowrap MuiGrid-align-items-xs-flex-start"
      style={
        Object {
          "flexGrow": undefined,
          "height": undefined,
          "width": undefined,
        }
      }
    >
      <p
        className="MuiTypography-root MuiTypography-body1"
        onClick={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        style={
          Object {
            "backgroundColor": "white",
            "paddingLeft": 10,
            "paddingRight": 10,
          }
        }
      >
        test
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots TreeView Input with context-aware nodeExtras 1`] = `
<div>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-wrap-xs-nowrap MuiGrid-align-items-xs-flex-start"
    style={
      Object {
        "flexGrow": undefined,
        "height": undefined,
        "marginLeft": 0,
        "width": undefined,
      }
    }
  >
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-wrap-xs-nowrap MuiGrid-align-items-xs-flex-start"
      style={
        Object {
          "flexGrow": undefined,
          "height": undefined,
          "width": undefined,
        }
      }
    >
      <p
        className="MuiTypography-root MuiTypography-body1"
        onClick={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        style={
          Object {
            "backgroundColor": "white",
            "paddingLeft": 10,
            "paddingRight": 10,
          }
        }
      >
        browserEvent: stuff
      </p>
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "minWidth": 80,
            "textTransform": "none",
          }
        }
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        />
      </button>
    </div>
  </div>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-wrap-xs-nowrap MuiGrid-align-items-xs-flex-start"
    style={
      Object {
        "flexGrow": undefined,
        "height": undefined,
        "marginLeft": 0,
        "width": undefined,
      }
    }
  >
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-wrap-xs-nowrap MuiGrid-align-items-xs-flex-start"
      style={
        Object {
          "flexGrow": undefined,
          "height": undefined,
          "width": undefined,
        }
      }
    >
      <p
        className="MuiTypography-root MuiTypography-body1"
        onClick={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        style={
          Object {
            "backgroundColor": "white",
            "paddingLeft": 10,
            "paddingRight": 10,
          }
        }
      >
        tag: 33
      </p>
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "minWidth": 80,
            "textTransform": "none",
          }
        }
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        />
      </button>
    </div>
  </div>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-wrap-xs-nowrap MuiGrid-align-items-xs-flex-start"
    style={
      Object {
        "flexGrow": undefined,
        "height": undefined,
        "marginLeft": 0,
        "width": undefined,
      }
    }
  >
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-wrap-xs-nowrap MuiGrid-align-items-xs-flex-start"
      style={
        Object {
          "flexGrow": undefined,
          "height": undefined,
          "width": undefined,
        }
      }
    >
      <p
        className="MuiTypography-root MuiTypography-body1"
        onClick={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        style={
          Object {
            "backgroundColor": "white",
            "paddingLeft": 10,
            "paddingRight": 10,
          }
        }
      >
        test
      </p>
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "minWidth": 80,
            "textTransform": "none",
          }
        }
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots TreeView Input with static nodeExtras 1`] = `
<div>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-wrap-xs-nowrap MuiGrid-align-items-xs-flex-start"
    style={
      Object {
        "flexGrow": undefined,
        "height": undefined,
        "marginLeft": 0,
        "width": undefined,
      }
    }
  >
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-wrap-xs-nowrap MuiGrid-align-items-xs-flex-start"
      style={
        Object {
          "flexGrow": undefined,
          "height": undefined,
          "width": undefined,
        }
      }
    >
      <p
        className="MuiTypography-root MuiTypography-body1"
        onClick={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        style={
          Object {
            "backgroundColor": "white",
            "paddingLeft": 10,
            "paddingRight": 10,
          }
        }
      >
        browserEvent: stuff
      </p>
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "minWidth": 80,
            "textTransform": "none",
          }
        }
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        />
      </button>
    </div>
  </div>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-wrap-xs-nowrap MuiGrid-align-items-xs-flex-start"
    style={
      Object {
        "flexGrow": undefined,
        "height": undefined,
        "marginLeft": 0,
        "width": undefined,
      }
    }
  >
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-wrap-xs-nowrap MuiGrid-align-items-xs-flex-start"
      style={
        Object {
          "flexGrow": undefined,
          "height": undefined,
          "width": undefined,
        }
      }
    >
      <p
        className="MuiTypography-root MuiTypography-body1"
        onClick={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        style={
          Object {
            "backgroundColor": "white",
            "paddingLeft": 10,
            "paddingRight": 10,
          }
        }
      >
        tag: 33
      </p>
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "minWidth": 80,
            "textTransform": "none",
          }
        }
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        />
      </button>
    </div>
  </div>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-wrap-xs-nowrap MuiGrid-align-items-xs-flex-start"
    style={
      Object {
        "flexGrow": undefined,
        "height": undefined,
        "marginLeft": 0,
        "width": undefined,
      }
    }
  >
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-wrap-xs-nowrap MuiGrid-align-items-xs-flex-start"
      style={
        Object {
          "flexGrow": undefined,
          "height": undefined,
          "width": undefined,
        }
      }
    >
      <p
        className="MuiTypography-root MuiTypography-body1"
        onClick={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        style={
          Object {
            "backgroundColor": "white",
            "paddingLeft": 10,
            "paddingRight": 10,
          }
        }
      >
        test
      </p>
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "minWidth": 80,
            "textTransform": "none",
          }
        }
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        />
      </button>
    </div>
  </div>
</div>
`;
